--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
     <body>
         <h1>Calcular Distancia con Leaflet.js</h1>
-        <div>
+        <div class="controls-row">
             <label for="origen">Origen (dirección):</label>
             <input type="text" id="origen" placeholder="Ej. Buenos Aires, Argentina" />
             <label for="destino">Destino (dirección):</label>
